Add download cache dir.

--- a/.pip/pip.conf
+++ b/.pip/pip.conf
@@ -1,4 +1,8 @@
 [global]
+timeout = 3000
+download_cache = ~/.pip/downloads/
 index-url = http://pypi.douban.com/simple
+
+[install]
 trusted-host = pypi.douban.com
 
