--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ set -g base-index 1
 set -g pane-base-index 1
 
 # Set tmux prefix to <C-a>
-set -g prefix C-a
+set -g prefix C-w
 unbind C-b
 
 # -- bind keys -- #
