--- a/.zjshaorc
+++ b/.zjshaorc
@@ -12,7 +12,8 @@ alias octave='/usr/local/bin/octave --no-gui'
 VASPY_PATH="/Users/zjshao/Documents/repos/VASPy"
 KMCLIBX_PATH="/Users/zjshao/Documents/repos/KMCLibX/python/src/"
 KYNETIX_PATH="/Users/zjshao/Documents/repos/Kynetix/"
-export PYTHONPATH=${VASPY_PATH}:${KMCLIBX_PATH}:${KYNETIX_PATH}:${PYTHONPATH}
+CATPLOT_PATH="/Users/zjshao/Documents/repos/catplot"
+export PYTHONPATH=${VASPY_PATH}:${KMCLIBX_PATH}:${KYNETIX_PATH}:${CATPLOT_PATH}:${PYTHONPATH}
 
 # brew bottle source
 export HOMEBREW_BOTTLE_DOMAIN="https://mirrors.ustc.edu.cn/homebrew-bottles"  # USTC image
