Add panel resize setting.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,3 +45,9 @@ bind-key h select-pane -L
 # right
 bind-key l select-pane -R
 
+# Resize panel size.
+bind < resize-pane -L 10
+bind > resize-pane -R 10
+bind _ resize-pane -D 10
+bind + resize-pane -U 10
+
