Switch mouse mode on.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,3 +51,7 @@ bind > resize-pane -R 10
 bind _ resize-pane -D 10
 bind + resize-pane -U 10
 
+# Use mouse to resize panel.
+set -g mouse-utf8 on
+set -g mouse on
+
