--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,9 +30,9 @@ bind Escape copy-mode
 # paste buffer
 bind C-p pasteb
 # select (v)
-bind -t vi-copy v begin-selection
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 # copy (y)
-bind -t vi-copy y copy-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 
 # Map panel switch.
