Add simpleflow path to PYTHONPATH.

--- a/.zjshaorc
+++ b/.zjshaorc
@@ -18,8 +18,9 @@ VASPY_PATH="/Users/zjshao/Documents/repos/VASPy"
 KMCLIBX_PATH="/Users/zjshao/Documents/repos/KMCLibX/python/src/"
 KYNETIX_PATH="/Users/zjshao/Documents/repos/Kynetix/"
 CATPLOT_PATH="/Users/zjshao/Documents/repos/catplot"
-GAPY_PATH="/Users/zjshao/Documents/repos/gaft"
-export PYTHONPATH=${VASPY_PATH}:${KMCLIBX_PATH}:${KYNETIX_PATH}:${CATPLOT_PATH}:${GAPY_PATH}:${PYTHONPATH}
+GAFT_PATH="/Users/zjshao/Documents/repos/gaft"
+SF_PATH="/Users/zjshao/Documents/repos/simpleflow"
+export PYTHONPATH=${VASPY_PATH}:${KMCLIBX_PATH}:${KYNETIX_PATH}:${CATPLOT_PATH}:${GAFT_PATH}:${SF_PATH}:${PYTHONPATH}
 
 # brew bottle source
 export HOMEBREW_BOTTLE_DOMAIN="https://mirrors.ustc.edu.cn/homebrew-bottles"  # USTC image
